# idiophone_tuner5

./: README.md  pyproject.toml  test.py
idiophone_tuner/: __init__.py  __main__.py  geometry.py  main.py  materials.py  optimizer.py  timoshenko.py
idiophone_tuner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
