[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "idiophone_tuner"
version = "0.1.0"
description = "FEM-based optimization of idiophone bars using Timoshenko beam theory"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "James"}
]
dependencies = [
    "numpy>=1.21",
    "scipy>=1.7",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]

[project.scripts]
idiophone-tuner = "idiophone_tuner.main:main"

[tool.setuptools.packages.find]
where = ["."]
